# InternshipAgent

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: c5772edd5b54_baseline.py
config/: companies.example.yaml  profile.yaml
docs/: design.md  requirements.md  tasks.md
src/: company_discoverer.py  config.py  db.py  main.py  resume_extractor.py
src/data/: company_ats_map.json
tests/: test_company_discoverer.py  test_db.py  test_resume_extractor.py
tests/integration/: test_rebuild_profile.py
